hphp/test/zend/bad/ext/intl/tests/timezone_createDefault_basic.php
<?php
ini_set("intl.error_level", E_WARNING);
$tz = IntlTimeZone::createDefault();
print_r($tz);
$tz = intltz_create_default();
print_r($tz);
?>
==DONE==